--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ h3 {
 }
 body {
     font-family: Arial, sans-serif;
-    background-image: url('https://i.imgur.com/fafM5NI.gif'); 
+    background-image: url('https://i.ibb.co/TT0nkF6/aae4c393d72470bdbc5937794ba3f359.gif'); 
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed:
